--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
   },
   "devDependencies": {
     "@wordpress/scripts": "^12.1.0",
+    "browser-sync": "^2.26.14",
     "dir-archiver": "^1.1.1",
+    "laravel-mix": "^6.0.24",
     "node-sass": "^4.14.1",
-    "rtlcss": "^2.5.0"
+    "resolve-url-loader": "^4.0.0",
+    "rtlcss": "^2.5.0",
+    "webpack": "^5.40.0"
   },
   "rtlcssConfig": {
     "options": {
@@ -36,14 +40,17 @@
     "map": false
   },
   "scripts": {
-    "watch": "node-sass sass/ -o ./ --source-map true --output-style expanded --indent-type tab --indent-width 1 -w",
-    "compile:css": "node-sass sass/ -o ./ && stylelint '*.css' --fix || true && stylelint '*.css' --fix",
-    "compile:rtl": "rtlcss style.css style-rtl.css",
-    "lint:scss": "wp-scripts lint-style 'sass/**/*.scss'",
-    "lint:js": "wp-scripts lint-js 'js/*.js'",
-    "bundle": "dir-archiver --src . --dest ../_s.zip --exclude .DS_Store .stylelintrc.json .eslintrc .git .gitattributes .github .gitignore README.md composer.json composer.lock node_modules vendor package-lock.json package.json .travis.yml phpcs.xml.dist sass style.css.map"
+    "clean": "rimraf dist",
+    "dev": "npm run development",
+    "development": "npm run clean && cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "npm run clean && cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "npm run development -- --watch"
   },
   "dependencies": {
+    "browser-sync-webpack-plugin": "^2.3.0",
+    "cross-env": "^7.0.3",
+    "postcss": "^8.3.5",
     "sass": "^1.35.1"
   }
 }
