--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "watch": "npm run development -- --watch"
   },
   "dependencies": {
+    "bootstrap": "^5.0.2",
     "browser-sync-webpack-plugin": "^2.3.0",
     "cross-env": "^7.0.3",
     "postcss": "^8.3.5",
