--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "bootstrap": "^5.0.2",
     "browser-sync-webpack-plugin": "^2.3.0",
     "cross-env": "^7.0.3",
+    "jquery": "^3.6.0",
+    "owl.carousel": "^2.3.4",
     "postcss": "^8.3.5",
     "sass": "^1.35.1"
   }
